--- a/Templates/index3.html
+++ b/Templates/index3.html
@@ -23,8 +23,13 @@
 
   <p class="biggos" align="center">Made By:</p>
   <p class="Num" align="center">Khenan putra.N</p>
-  <img src="static/mii.jpg" align="center"
+  <img src="static/mii.jpeg" align="center"
+  <p></p>
   <p align="center">hobbies: Playing games, 3d animating, making 3d models, coding, reading books.</p>
+  <p align="center">Favourite games / Game Genres: Minecraft, Roblox, FNAF, drone games, car games.</p>
+  <p align="center">Favourite 3d animation / modeling softwares: Blender, Maya.</p>
+  <p align="center">Favourite render engines: Cycles, Octane, Radeon ProRender, LuxCore, V-ray, Arnold.</p>
+  <p align="center">Favourite Programming languages: HTML, CSS, Swift, Java, C++, C#, JavaScript.</p>
   <p class="biggos" align="center">With help from:</p>
   
 
