--- a/Templates/lgn.html
+++ b/Templates/lgn.html
@@ -17,7 +17,7 @@
                 <div class="row"
                     <div class="col-md-12">
                         <h2>Pythonzen project 1,Login Page (:</h2>
-                        <p>Fill in ye virtual mail (email) n secret pass (password</p>
+                        <p>Fill in ye virtual mail (email) n secret pass (password)</p>
                         <form action="" method="post">
                             <div class="form-group">
                                 <label>Full name here</label>
