--- a/Templates/index3.html
+++ b/Templates/index3.html
@@ -5,7 +5,7 @@
 <body>
   <div class="header">
     <a href="index.html" class="logo">Damascus</a>
-    <div class="header-right">
+    <div class="header-center">
       <a href="index1.html">Home</a>
        <a href="index2.html">About</a>
        <a class="active" href="index3.html">Credits</a>
@@ -23,7 +23,9 @@
 
   <p class="biggos" align="center">Made By:</p>
   <p class="Num" align="center">Khenan putra.N</p>
-  <img src="static/mii.jpeg" align="center"
+
+  <img src="static/mii.jpeg" alt="me" class="imag">
+
   <p></p>
   <p align="center">hobbies: Playing games, 3d animating, making 3d models, coding, reading books.</p>
   <p align="center">Favourite games / Game Genres: Minecraft, Roblox, FNAF, drone games, car games.</p>
@@ -37,6 +39,6 @@
 </body>
 
 
-<footer>@ Copyright 2022 WIBS</footer>
+<footer>@ Copycenter 2022 WIBS</footer>
 
 </html>
