--- a/Templates/lgn.html
+++ b/Templates/lgn.html
@@ -20,19 +20,19 @@
                         <p>Fill in ye virtual mail (email) n secret pass (password)</p>
                         <form action="" method="post">
                             <div class="form-group">
-                                <label>Full name here</label>
+                                <label>Full name here:</label>
                                 <input type="text" name="name" class="form-control" required>
                             </div>
                             <div class="form-group">
-                                <label>Email here</label>
+                                <label>Email here:</label>
                                 <input type="email" name="email" class="form-conrol" required>
                             </div>
                             <div class="form-group">
-                                <label>Password here</label>
+                                <label>Password here:</label>
                                 <input type="password" name="password" class="form-conrol" required>
                             </div>
                             <div class="form-group">
-                                <label>Confirm your password here</label>
+                                <label>Confirm your password here:</label>
                                 <input type="password" name="confirm_password" class="form-conrol" required>
                             </div>
                             <div class="form-group">
