--- a/Templates/index.html
+++ b/Templates/index.html
@@ -13,6 +13,7 @@
    </div>
  </div>
  <body>
+   <div class="cool">
   <link rel="stylesheet" href="static/StY.css">
    <h2>Welcome!</h2>
 
@@ -23,5 +24,6 @@
   <p>Use the Navbar to navigate through pages!</p>
  </body>
  <footer>© Copyright 2022 WIBS</footer>
+</div>
 
 </html>
