--- a/Templates/lgn.html
+++ b/Templates/lgn.html
@@ -38,7 +38,7 @@
                             <div class="form-group">
                                 <input type="submit" name="submit" class="btn btn-primary" value="Submit">
                             </div>
-                            <p class="messg">If u dont have an acc the why r u here? <a href="regstr.php">click ME!</a>.</p>
+                            <p class="messg">If u dont have an acc the why r u here? <a href="static/regstr.php">click ME!</a>.</p>
                         </form>
                     </div>
                 </div>
